# UI-Pro

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .mypy.ini  AGENTS.md  API.md  ARCHITECTURE.md  ARCH_REFACTOR_PLAN.md  DEBUG_ANALYSIS.md  Dockerfile  Makefile  README.md  REFACTORING_PLAN.md  REVIEW.md  TODO.md  config.yaml  config.yaml.example  conftest.py  duplicate_report.md  fix_tests.py  mypy.ini  package-lock.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run.py  settings.py  setup.py  start_api.py  test_websocket.py
.claude/debug/: c16c9f9b-148f-4a87-893b-a1d143b998b4.txt
.claude/shell-snapshots/: snapshot-bash-1766907029500-xb225z.sh
.claude/statsig/: statsig.cached.evaluations.263d9ac3bc  statsig.last_modified_time.evaluations  statsig.session_id.2656274335  statsig.stable_id.2656274335
.claude/transcripts/: ses_2ba78eb37ffeZVr10nXCPuCVxG.jsonl  ses_2c471349effeB1FEJ4VXcbJY1D.jsonl  ses_2c47418f7ffexAwTDm3AoWw3tD.jsonl  ses_2c4b949c7ffe6zt7VclXcexaGJ.jsonl  ses_2c4d0eeeeffe4i0c0xdvoseY33.jsonl  ses_2c4d2a8d4ffe4hY2Vm7g7vAjJI.jsonl  ses_2c4d52117ffe7njtwjSwK3PX5Z.jsonl  ses_2c4d8139bffemb9JyuPDGsthAE.jsonl  ses_2c73b650dffeWqcQFa5AVNhLIR.jsonl  ses_2c73fe958ffeE8OOEA6CGYKz8T.jsonl  ses_2c7480548ffe7zkzNRTntSPFK0.jsonl  ses_2c74a6e57ffemQXuJJHMaEkQyh.jsonl  ses_2c74a6e66ffe01TbB2NUxdJ37P.jsonl  ses_2c74a6e77ffehWLybk05FqOJyi.jsonl  ses_2c74a6e81ffeqohlo0bMnfBWys.jsonl  ses_2c74b9a79ffe8O2f4mtR3e1xS4.jsonl  ses_2c74b9a94ffeEPquuH54vbNMmw.jsonl  ses_2c74b9aafffehcNOT6ZMEHNW3R.jsonl  ses_2c74b9ac6ffeNYDH3mEd5apQ8V.jsonl  ses_2c74fb1a5ffeCfoi2L99aRmqj2.jsonl  ses_2c75b2d09ffeWkCyQs6HWocM7A.jsonl  ses_2c78bf304ffefT4FGQ4k3a4WDQ.jsonl  ses_2c78bf313ffeFFcTs9IBrYr2e8.jsonl  ses_2c78bf31fffe9PgYxowfOI9KNR.jsonl  ses_2c78bf328ffeCeYzsEsyBq5Zr2.jsonl  ses_2c78c2857ffeCXgaaeQmvdOi76.jsonl  ses_2c78c287bffebawZ1zf942B0Gn.jsonl  ses_2c78c288fffeIKubpYb5SjQnJN.jsonl  ses_2c78c28a4ffeQeXgSyMDb4MwYt.jsonl  ses_2c78d974dffeDhlP4IeaC2nxwi.jsonl  ses_2c79472d9ffeyS4VwJAmcuxiG4.jsonl  ses_2ca3b2f23ffeE5efKR6Lcy8T7t.jsonl  ses_2ca3b2f34ffeMZGb5t391N7PYy.jsonl  ses_2ca3b2f4fffemFGJTOSlNlAQUn.jsonl  ses_2ca3b2f66ffey41MakG1nD86kd.jsonl  ses_2ca3f92d2ffeRQicGDByw7qsH0.jsonl  ses_2ca41deffffe3zETAIiHdgx6b0.jsonl  ses_2cc264680ffe0Ea4xJ971iJadI.jsonl  ses_2cc2d0202ffeituTBXyfg5M8Tn.jsonl  ses_2cc2efe4fffes2yhjRtUtxy7XX.jsonl  (+43 more)
.github/workflows/: ci.yml  publish-prompts.yml
.sisyphus/: summary.md
.sisyphus/plans/: roadmap-ux-product.md
adapters/: __init__.py
adapters/executor/: __init__.py
adapters/llm/: __init__.py  client.py
adapters/memory/: __init__.py  faiss.py
agents/: __init__.py  agent.py  planner.py  react.py
api/: CHANGES_MADE.md  dashboard.py  main.py  translations.py  web.py
api/events/: __init__.py  websocket_events.py
api/routers/: __init__.py  chat.py  execute.py  health.py  logs.py  ws.py
app/: __init__.py  launcher.py
assets/styles/: dashboard.css
backend/: __init__.py  main.py
backend/application/: __init__.py  editor_manager.py  launcher.py  voice_manager.py  websocket.py
backend/domain/: __init__.py  errors.py  settings.py  settings_v2.py
backend/infrastructure/: __init__.py  base.py  cache.py  checkpointer.py  code_execution.py  docker_sandbox.py  embedding_cache.py  error_handler.py  legacy_llm_router.py  llm_router.py  memory.py  memory_service.py  model_discovery.py  model_service.py  multi_lang_executor.py  rate_limit.py  secure_executor.py  service_api.py  streaming.py  streaming_unified.py  tools.py  tracing.py  vector_index.py
backend/prompts/: planner_system_prompt.md
backend/transport/: __init__.py  dashboard.py  main.py  translations.py  views_api.py  websocket_manager.py
config/: __init__.py
controllers/: __init__.py  code_review.py  executor.py  llm_client.py  orchestrator.py  team.py  websocket.py
core/: __init__.py  code_review.py  config.py  constants.py  errors.py  events.py  executor.py  logger.py  memory.py  metrics.py  old_orchestrator.py  orchestrator_async.py  prompts.py  state_manager.py
data/: memory.index  memory_docs.pkl
docs/: README.md  architecture_mcp.md  opencode_protocol.json
docs/api/: API.md
docs/architecture/: AGENTS.md  ARCHITECTURE.md  TODO.md
docs/monitoring/: README.md  grafana-dashboard.json
frontend/: DESIGN_SYSTEM.md  FRONTEND.md  jest.config.ts  jest.setup.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo
llm/: __init__.py  client.py  models.py  router.py
models/: __init__.py  llm_models.py  llm_router.py  memory.py  metrics.py  settings.py
scripts/: README.md  check_cleanup.py  kill_port.py  send_bonjour.py  verify_imports.py
services/: __init__.py  agents.py  base.py  chat_service.py  code_execution.py  docker_sandbox.py  error_handler.py  llm_router.py  memory_service.py  model_discovery.py  model_service.py  service_api.py  streaming.py  tools.py
static/: app.js
stores/: __init__.py
templates/: dashboard.html  index.html
tests/: conftest.py  debug_opencode_flow.py  test_api.py  test_code_extractor.py  test_execution.py  test_executor.py  test_faiss.py  test_fallback.py  test_fix_prompts.py  test_force_provider_resolution.py  test_integration_opencode.py  test_integration_voice_flow.py  test_llm.py  test_llm_backends.py  test_llm_opendesign.py  test_llm_wrapper_retry.py  test_mario.py  test_mcp_discovery.py  test_memory.py  test_model_discovery.py  test_monitoring.py  test_opencode_command_flow.py  test_opencode_mock.py  test_orchestrator.py  test_p3_2_executing_node.py  test_pipeline_nodes.py  test_real_connection.py  test_review_scoring.py  test_router.py  test_send_action.py  test_settings.py  test_streaming_infra.py  test_streaming_verification.py  verify_mcp_flow.py
ui/: dashboard.py
ui-pro-ui/: .env.example  DESIGN_SYSTEM.md  FRONTEND.md  jest.config.ts  jest.setup.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
utils/: fallback.py
views/: __init__.py  api.py  dashboard.py  logger.py
(+338 files in other folders)
