

# pyproject.toml - Configuration projet Python

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ui-pro"
version = "0.1.0"
description = "LLM orchestration and memory management"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1",
    "requests>=2",
    "beautifulsoup4>=4",
    "faiss-cpu>=1",
    "numpy>=1",
    "sentence-transformers>=2",
    "python-multipart>=0",
    "uvicorn>=0",
    "fastapi>=0",
    "jinja2>=3",
    "pyyaml>=6",
    "pytest>=7",
    "pytest-mock>=3",
]

[project.optional-dependencies]
dev = [
    "black>=23",
    "isort>=5",
    "flake8>=6",
    "mypy>=1",
]

[tool.black]
# Black configuration
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
# isort configuration
profile = "black"
line_length = 88
skip = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
]
# Multi-line output
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
# Mypy configuration - type checking
strict = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = false
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["fastapi.*,pydantic.*,requests.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["tests"]
addopts = "-v --cov=ui-pro --cov-report=term --cov-report=xml"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.pyright]
include = ["backend/**"]
exclude = ["workspace/**", "**/__pycache__/**", ".venv/**"]
typeCheckingMode = "basic"
reportMissingImports = false
reportOptionalMemberAccess = false
reportTypedDictNotRequiredAccess = false
reportGeneralTypeIssues = false
pythonVersion = "3.10"

[tool.coverage.run]
branch = true
source = ["ui-pro"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_patterns = [
    "*/tests/*",
    "*/__init__.py",
]
