

# pyproject.toml - Configuration projet Python

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ui-pro"
version = "0.1.0"
description = "LLM orchestration and memory management"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1",
    "requests>=2",
    "beautifulsoup4>=4",
    "faiss-cpu>=1",
    "numpy>=1",
    "sentence-transformers>=2",
    "python-multipart>=0",
    "uvicorn>=0",
    "fastapi>=0",
    "jinja2>=3",
    "pyyaml>=6",
    "pytest>=7",
    "pytest-mock>=3",
]

[project.optional-dependencies]
dev = [
    "black>=23",
    "isort>=5",
    "flake8>=6",
    "mypy>=1",
]

[tool.black]
# Black configuration
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
# isort configuration
profile = "black"
line_length = 88
skip = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
]
# Multi-line output
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
# Mypy configuration - type checking
strict = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = false
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["fastapi.*,pydantic.*,requests.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["tests"]
addopts = "-v --cov=backend --cov-report=term --cov-report=xml"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors (errors only)
    "F",     # pyflakes (errors only)
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLW0603", # global-statement
    "PLW1510", # subprocess.run without check (legacy)
    "PLC0415", # import not at top level (legacy lazy imports)
    "SIM102", # nested if statements (legacy)
    "E712",   # equality to True/False (legacy)
    "F841",   # unused variables (legacy)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "F841", "E712", "RUF059", "F821", "RUF015", "B007", "B018"]  # Allow assert, magic values, unused vars
"adapters/**" = ["ALL"]  # Legacy code - ignore all rules
"scripts/**" = ["ALL"]  # Scripts - ignore all rules
"run.py" = ["PLC0415", "PLW1510", "SIM102", "E722", "RUF001", "E402"]  # Launcher script
"setup.py" = ["PLC0415", "PLW1510"]  # Setup script
"llm/**" = ["PLC0415", "PLW1510", "F401"]  # Legacy llm package
"backend/**" = [
    "E402",  # Module level import not at top (FastAPI routers)
    "E721",  # Ambiguous variable names (l, I)
    "E741",  # Ambiguous variable name
    "F401",  # Unused imports
    "F811",  # Redefinition
    "F821",  # Undefined name
    "F822",  # Undefined name in __all__
    "B007",  # Unused loop control
    "B008",  # Body in argument defaults (FastAPI)
    "B018",  # Useless expression
    "B904",  # raise from err
    "E722",  # Bare except
    "RUF012",  # Mutable class default
    "RUF013",  # Implicit Optional
    "RUF022",  # __all__ not sorted
    "RUF059",  # Unpacked variable unused
    "UP035",  # typing.Dict deprecated
    "B905",  # zip without strict
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
include = ["backend/**", "llm/**", "models/**"]
exclude = ["workspace/**", "**/__pycache__/**", ".venv/**", "tests/**"]
typeCheckingMode = "basic"
pythonVersion = "3.10"
reportMissingImports = false
reportMissingTypeStubs = false
reportOptionalMemberAccess = false
reportTypedDictNotRequiredAccess = false
reportGeneralTypeIssues = false
reportUnusedVariable = false
reportUnusedFunction = false
reportUnusedImport = false
reportAttributeAccessIssue = false
reportCallIssue = false
reportOperatorIssue = false
reportArgumentType = false
reportReturnType = false
reportNamedExpression = false
reportUntypedFunction = false
reportUntypedClass = false
reportUnknownVariableType = false
reportInvalidStringEscapeSequence = false
reportUndefinedVariable = false

[tool.coverage.run]
branch = true
source = ["ui-pro"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_patterns = [
    "*/tests/*",
    "*/__init__.py",
]
